@@ -42,6 +42,26 @@ name|java
 operator|.
 name|util
 operator|.
+name|Arrays
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Collections
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
 name|HashMap
 import|;
 end_import
@@ -63,6 +83,20 @@ operator|.
 name|util
 operator|.
 name|Map
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|concurrent
+operator|.
+name|atomic
+operator|.
+name|AtomicBoolean
 import|;
 end_import
 
@@ -294,6 +328,99 @@ argument_list|)
 expr_stmt|;
 name|count
 operator|++
+expr_stmt|;
+block|}
+block|}
+return|;
+block|}
+block|}
+DECL|class|SetScorerCollector
+specifier|private
+specifier|static
+class|class
+name|SetScorerCollector
+extends|extends
+name|FilterCollector
+block|{
+DECL|field|setScorerCalled
+specifier|private
+specifier|final
+name|AtomicBoolean
+name|setScorerCalled
+decl_stmt|;
+DECL|method|SetScorerCollector
+specifier|public
+name|SetScorerCollector
+parameter_list|(
+name|Collector
+name|in
+parameter_list|,
+name|AtomicBoolean
+name|setScorerCalled
+parameter_list|)
+block|{
+name|super
+argument_list|(
+name|in
+argument_list|)
+expr_stmt|;
+name|this
+operator|.
+name|setScorerCalled
+operator|=
+name|setScorerCalled
+expr_stmt|;
+block|}
+annotation|@
+name|Override
+DECL|method|getLeafCollector
+specifier|public
+name|LeafCollector
+name|getLeafCollector
+parameter_list|(
+name|LeafReaderContext
+name|context
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+return|return
+operator|new
+name|FilterLeafCollector
+argument_list|(
+name|super
+operator|.
+name|getLeafCollector
+argument_list|(
+name|context
+argument_list|)
+argument_list|)
+block|{
+annotation|@
+name|Override
+specifier|public
+name|void
+name|setScorer
+parameter_list|(
+name|Scorer
+name|scorer
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+name|super
+operator|.
+name|setScorer
+argument_list|(
+name|scorer
+argument_list|)
+expr_stmt|;
+name|setScorerCalled
+operator|.
+name|set
+argument_list|(
+literal|true
+argument_list|)
 expr_stmt|;
 block|}
 block|}
@@ -596,6 +723,267 @@ name|close
 argument_list|()
 expr_stmt|;
 block|}
+block|}
+DECL|method|testSetScorerAfterCollectionTerminated
+specifier|public
+name|void
+name|testSetScorerAfterCollectionTerminated
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+name|Collector
+name|collector1
+init|=
+operator|new
+name|TotalHitCountCollector
+argument_list|()
+decl_stmt|;
+name|Collector
+name|collector2
+init|=
+operator|new
+name|TotalHitCountCollector
+argument_list|()
+decl_stmt|;
+name|AtomicBoolean
+name|setScorerCalled1
+init|=
+operator|new
+name|AtomicBoolean
+argument_list|()
+decl_stmt|;
+name|collector1
+operator|=
+operator|new
+name|SetScorerCollector
+argument_list|(
+name|collector1
+argument_list|,
+name|setScorerCalled1
+argument_list|)
+expr_stmt|;
+name|AtomicBoolean
+name|setScorerCalled2
+init|=
+operator|new
+name|AtomicBoolean
+argument_list|()
+decl_stmt|;
+name|collector2
+operator|=
+operator|new
+name|SetScorerCollector
+argument_list|(
+name|collector2
+argument_list|,
+name|setScorerCalled2
+argument_list|)
+expr_stmt|;
+name|collector1
+operator|=
+operator|new
+name|TerminateAfterCollector
+argument_list|(
+name|collector1
+argument_list|,
+literal|1
+argument_list|)
+expr_stmt|;
+name|collector2
+operator|=
+operator|new
+name|TerminateAfterCollector
+argument_list|(
+name|collector2
+argument_list|,
+literal|2
+argument_list|)
+expr_stmt|;
+name|Scorer
+name|scorer
+init|=
+operator|new
+name|FakeScorer
+argument_list|()
+decl_stmt|;
+name|List
+argument_list|<
+name|Collector
+argument_list|>
+name|collectors
+init|=
+name|Arrays
+operator|.
+name|asList
+argument_list|(
+name|collector1
+argument_list|,
+name|collector2
+argument_list|)
+decl_stmt|;
+name|Collections
+operator|.
+name|shuffle
+argument_list|(
+name|collectors
+argument_list|,
+name|random
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|Collector
+name|collector
+init|=
+name|MultiCollector
+operator|.
+name|wrap
+argument_list|(
+name|collectors
+argument_list|)
+decl_stmt|;
+name|LeafCollector
+name|leafCollector
+init|=
+name|collector
+operator|.
+name|getLeafCollector
+argument_list|(
+literal|null
+argument_list|)
+decl_stmt|;
+name|leafCollector
+operator|.
+name|setScorer
+argument_list|(
+name|scorer
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|setScorerCalled1
+operator|.
+name|get
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|setScorerCalled2
+operator|.
+name|get
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|leafCollector
+operator|.
+name|collect
+argument_list|(
+literal|0
+argument_list|)
+expr_stmt|;
+name|leafCollector
+operator|.
+name|collect
+argument_list|(
+literal|1
+argument_list|)
+expr_stmt|;
+name|setScorerCalled1
+operator|.
+name|set
+argument_list|(
+literal|false
+argument_list|)
+expr_stmt|;
+name|setScorerCalled2
+operator|.
+name|set
+argument_list|(
+literal|false
+argument_list|)
+expr_stmt|;
+name|leafCollector
+operator|.
+name|setScorer
+argument_list|(
+name|scorer
+argument_list|)
+expr_stmt|;
+name|assertFalse
+argument_list|(
+name|setScorerCalled1
+operator|.
+name|get
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|setScorerCalled2
+operator|.
+name|get
+argument_list|()
+argument_list|)
+expr_stmt|;
+try|try
+block|{
+name|leafCollector
+operator|.
+name|collect
+argument_list|(
+literal|1
+argument_list|)
+expr_stmt|;
+name|fail
+argument_list|()
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|CollectionTerminatedException
+name|e
+parameter_list|)
+block|{
+comment|// expected
+block|}
+name|setScorerCalled1
+operator|.
+name|set
+argument_list|(
+literal|false
+argument_list|)
+expr_stmt|;
+name|setScorerCalled2
+operator|.
+name|set
+argument_list|(
+literal|false
+argument_list|)
+expr_stmt|;
+name|leafCollector
+operator|.
+name|setScorer
+argument_list|(
+name|scorer
+argument_list|)
+expr_stmt|;
+name|assertFalse
+argument_list|(
+name|setScorerCalled1
+operator|.
+name|get
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertFalse
+argument_list|(
+name|setScorerCalled2
+operator|.
+name|get
+argument_list|()
+argument_list|)
+expr_stmt|;
 block|}
 block|}
 end_class
